# stack

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  list.h  main.c
travis/: CMakeLists.txt
